Push trang home frontend

--- a/frontend/reactjs/src/App.scss
+++ b/frontend/reactjs/src/App.scss
@@ -64,7 +64,7 @@
   .login_box{
     border-radius: 30px;
     margin-left: 6rem;
-    width: 280px;
+    //width: 280px;
     padding: 3rem 5rem;
     box-shadow: #b4e1e2 2.4px 2.4px 3.2px;
     .login_btn {
