--- a/frontend/reactjs/src/index.css
+++ b/frontend/reactjs/src/index.css
@@ -2,14 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+/* latin-ext */
+@font-face {
+    font-family: 'Lemon';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./assets/font/Lemon/HI_EiYEVKqRMq3jIQ5TwQw.woff2') format('woff2');
+    unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: 'Lemon';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./assets/font/Lemon/HI_EiYEVKqRMq3jGQ5Q.woff2') format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    /*font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;*/
+  font-family: "Lemon", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /*color-scheme: light dark;*/
+  /*color: rgba(255, 255, 255, 0.87);*/
+  /*background-color: #242424;*/
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,7 +38,7 @@
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /*place-items: center;*/
   min-width: 320px;
   min-height: 100vh;
 }
@@ -186,4 +204,20 @@ body {
 
  .title_feature{
   font-size: 22px !important;
+ }
+
+ .green-color {
+    color: #00AAAD;
+ }
+
+ .yellow-color {
+    color: #FFC10E;
+ }
+
+ .blue-bg-color {
+    background-color: #BCFAFF;
+ }
+
+ .border-radius-20 {
+     border-radius: 20px;
  }
